# qtpy-release-chooser

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/qtpy_release_chooser/: __init__.py  _arch.py  _shutdown.py  config.py  github_selector.py  progress.py  select_update.py  update_dialog.py  update_github.py  update_process.py
tests/: test_smoke.py
