[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtpy-release-chooser"
version = "0.1.0"
description = "Qt dialogs for choosing GitHub releases / update channels"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "oldrepublicwizard" }]
dependencies = [
    "qtpy",
    "markdown",
    "requests",
]

[project.urls]
Homepage = "https://github.com/oldrepublicwizard/qtpy-release-chooser"
Repository = "https://github.com/oldrepublicwizard/qtpy-release-chooser"

[tool.setuptools.packages.find]
where = ["src"]
